# dofus-market

./: .gitignore  .releaserc.yml  CONTRIBUTING.md  DofusTouchDBQuery.ipynb  README.md  index.yaml  requirements.txt  temp.json  test_nim.py
backend/: README.md  docker-compose.yaml  manage.py  official_website_data.json  pyproject.toml  pytest.ini  requirements.txt
backend/api/: urls.py
backend/api/scrapers/: dofus_book_scraper.py  official_website_scraper.py
backend/api/serializers/: caracteristique.py  equipements.py  ingredients.py  ingredients_for_craft.py  metiers.py  runes.py
backend/api/views/: caracteristiques.py  equipements.py  generate_database.py  ingredients.py  metiers.py  runes.py
backend/deploy/: Dockerfile
backend/deploy/envoy/: Dockerfile  envoy.yaml
backend/django_project/: asgi.py  settings.py  urls.py  wsgi.py
backend/dofus_market/: manage.py  pytest.ini  requirements.txt
backend/dofus_market/api/: urls.py
backend/dofus_market/dofus_market/: settings.py  urls.py  wsgi.py
backend/dofus_market/grpc_market/: apps.py  handlers.py  services.py
backend/dofus_market/market/: admin.py  models.py
backend/grpc_market/: handlers.py
backend/grpc_market/grpc/: grpc_market_p2p.py  grpc_market_pb2.py  grpc_market_pb2_grpc.py
backend/grpc_market/serializers/: equipement_serializer.py  ingredient_for_craft_serializer.py  ingredient_serializer.py  metier_serializer.py  recette_serializer.py  rune_serializer.py
backend/grpc_market/services/: equipement_service.py  ingredient_service.py  (+2 more)
backend/market/: admin.py  models.py  runes.py
(+167 files in other folders)
